# foxcloud-cas

./: .gitignore  README.md  babel.cfg  requirements.txt  setup.cfg  setup.py
foxcloud/: __init__.py  api_versions.py  base.py  client.py  config.py  exceptions.py  i18n.py  log.py  meta.py  task_manager.py  test.py
foxcloud/doc/: MAGNUM.md  OCTAVIA.md  README.md  TROVE.md
foxcloud/doc/resources/magnum/: cluster_template_1
foxcloud/tests/: s3-customer.py  test.py  test.txt  test_func.py  test_lbaas.py  test_ldap.py  test_magnum.py  test_shade.py  test_trove.py  tests3.py  tests3byboto3.py  tests3lab.py
foxcloud/v1/: client.py
foxcloud/v1/services/: adapter.py  base.py
foxcloud/v1/services/ceph/: base.py  client.py  console.py  heat.py
foxcloud/v1/services/coe/: base.py  client.py  console.py
foxcloud/v1/services/coe/heat/: base.py  models.py  orchestrator.py
foxcloud/v1/services/lbaas/: base.py  client.py  console.py
foxcloud/v1/services/lbaas/heat/: base.py  models.py  orchestrator.py
foxcloud/v1/services/ldap/: base.py  client.py  console.py  heat.py
foxcloud/v1/services/s3/: base.py  client.py  console.py  heat.py
foxcloud/v1/services/shade/: base.py  client.py  console.py  neutron.py
foxcloud/v1/services/stack/: model.py
foxcloud/v1/services/trove/: base.py  client.py  console.py
foxcloud/v1/utils/: constants.py  data_util.py  environment_format.py  errors.py  event_util.py  hash_util.py  http_util.py  keystone_util.py  net_util.py  nova_util.py  reponse.py  str_util.py  sys_util.py  template_util.py
(+8 files in other folders)
