[metadata]
name = foxcloud
summary = Client library for FoxCloud API
description-file =
    README.md
author = KhanhCT
author-email = trongkhanh.chu@gmail.com
# home-page =
python-requires = >=3.6
classifier =
    Environment :: OpenStack, CEPH
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    foxcloud

[compile_catalog]
directory = foxcloud/locale
domain = foxcloud

[update_catalog]
domain = foxcloud
output_dir = foxcloud/locale
input_file = foxcloud/locale/foxcloud.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = foxcloud/locale/foxcloud.pot
